LayoutTests/http/tests/security/cross-origin-websql-expected.txt
CONSOLE MESSAGE: line 5: Web SQL is deprecated. Please use IndexedDB instead.
CONSOLE MESSAGE: line 5: Web SQL is deprecated. Please use IndexedDB instead.
This iframe should return a security error:


This iframe should not return any errors:



--------
Frame: '<!--frame1-->'
--------
SecurityError

--------
Frame: '<!--frame2-->'
--------
No exception
